Modified to match current goDaddy website.

--- a/pages/index/index.html
+++ b/pages/index/index.html
@@ -10,7 +10,10 @@
 <body>
 
 	<div id="links">
-		<div class="link_header"><span class="fa fa-unlock-alt fa-5x"></span></div>
+		<ul>
+			<li><a href="/pages/"><div class="link_header"><span class="fa fa-unlock-alt fa-5x"></span></div></a></li>
+		</ul>
+
 		
 		<div class="link_list">
 			<ul>
