--- a/pages/profile/index.html
+++ b/pages/profile/index.html
@@ -15,7 +15,7 @@
 		<div class="link_list">
 			<ul>
 					<p><br /></p>
-					<h1>Description </h1>
+					<h1>Summary</h1>
 					<div id="description">
 					I am a Security Analyst with a passion for the researching of security vulnerabilities in enterprise software.<br /><br />
 					ALSO<br />
@@ -36,7 +36,7 @@
 					</div>
 					
 					<p><br /></p>
-					<h1>Languages </h1>
+					<h1>Language Skills</h1>
 					<a target="_blank" title="php" href="http://php.net/"><img class="program_image" src="../../images/programs/php.jpg" /></a>
 					<a target="_blank" title="Perl" href="http://www.perl.org"><img class="program_image" src="../../images/programs/perl.jpg" /></a>
 					<a target="_blank" title="JavaScript" href="http://www.w3schools.com/js/default.asp"><img class="program_image" src="../../images/programs/javascript.jpg" /></a>
@@ -52,7 +52,7 @@
 					<a target="_blank" title="awk" href="http://www.gnu.org/software/gawk/manual/gawk.html"><img class="program_image" src="../../images/programs/awk.jpg" /></a><br />
 
 					<p><br /></p>
-					<h1>Databases </h1>
+					<h1>Databases Skills</h1>
 					<a target="_blank" title="Oracle Database" href="http://www.oracle.com/us/products/database/overview/index.html"><img class="program_image" src="../../images/programs/oracleDB.jpg" /></a>
 					<a target="_blank" title="Microsoft SQL Server" href="http://www.microsoft.com/en-us/sqlserver/default.aspx"><img class="program_image" src="../../images/programs/mssql2.jpg" /></a>
 					<a target="_blank" title="MySQL" href="http://www.mysql.com"><img class="program_image" src="../../images/programs/mysql.jpg" /></a>
@@ -61,7 +61,7 @@
 					<a target="_blank" title="CouchDB" href="http://couchdb.apache.org/"><img class="program_image" src="../../images/programs/couchdb.jpg" /></a>					
 
 					<p><br /></p>
-					<h1>Operating Systems </h1>
+					<h1>Operating Systems Proficiency</h1>
 					<a target="_blank" title="Windows" href="http://windows.mocrosoft.com"><img class="program_image" src="../../images/programs/windows.jpg" /></a>
 					<a target="_blank" title="Kali" href="https://www.kali.org/"><img class="program_image" src="../../images/programs/kali.jpg" /></a>
 					<a target="_blank" title="Red Hat" href="http://www.redhat.com"><img class="program_image" src="../../images/programs/redhat.jpg" /></a>
@@ -70,7 +70,7 @@
 					<a target="_blank" title="CentOS" href="http://www.centos.org/"><img class="program_image" src="../../images/programs/centos.jpg" /></a>
 
 					<p><br /></p>
-					<h1>Misc </h1>
+					<h1>Misc Interesting Skills</h1>
 					<a target="_blank" title="Burp Suite" href="https://portswigger.net/burp/"><img class="program_image" src="../../images/programs/burp.png" /></a>
 					<a target="_blank" title="Subversion" href="http://subversion.tigris.org/"><img class="program_image" src="../../images/programs/svn.jpg" /></a>
 					<a target="_blank" title="Git" href="http://git-scm.com/"><img class="program_image" src="../../images/programs/git.jpg" /></a>
