Changed root link as it was broken on the github site, but not on the goDaddy site.

--- a/pages/index/index.html
+++ b/pages/index/index.html
@@ -11,7 +11,7 @@
 
 	<div id="links">
 		<ul>
-			<li><a href="/pages/"><div class="link_header"><span class="fa fa-unlock-alt fa-5x"></span></div></a></li>
+			<li><a href="/"><div class="link_header"><span class="fa fa-unlock-alt fa-5x"></span></div></a></li>
 		</ul>
 
 		
