--- a/pages/profile/index.html
+++ b/pages/profile/index.html
@@ -17,7 +17,7 @@
 					<p><br /></p>
 					<h1>Summary</h1>
 					<div id="description">
-					I am a Security Analyst with a passion for the researching of security vulnerabilities in enterprise software.<br /><br />
+					I am a Lead Security Analyst with a passion for the researching of security vulnerabilities in enterprise software.<br /><br />
 					ALSO<br />
 					<ul class="skills">
 						<li class="skills">Configuration and Change Management</li>
