--- a/pages/profile/index.html
+++ b/pages/profile/index.html
@@ -91,6 +91,8 @@
 					<a target="_blank" title="OSSEC" href="http://ossec.github.io/"><img class="program_image" src="../../images/programs/ossec.jpg" /></a>
 					<a target="_blank" title="Metasploit" href="https://www.metasploit.com/"><img class="program_image" src="../../images/programs/metasploit.jpg" /></a>
 					<a target="_blank" title="Nmap" href="https://nmap.org/"><img class="program_image" src="../../images/programs/nmap.jpg" /></a>
+					<a target="_blank" title="Ida Pro" href="https://www.hex-rays.com/products/ida/"><img class="program_image" src="../../images/programs/ida_pro.jpg" /></a>
+					<a target="_blank" title="Radare2" href="http://rada.re/r/"><img class="program_image" src="../../images/programs/radare.png" /></a>
 					<p><br /></p>
 			</ul>
 			
