--- a/pages/profile/index.html
+++ b/pages/profile/index.html
@@ -40,7 +40,8 @@
 					<a target="_blank" title="BS Information Technology (Software Development Emphasis)" href="https://www.boisestate.edu/"><img class="program_image" src="../../images/certs/bsu.png" /></a>
 					<a target="_blank" title="AA Psychology" href="http://www.tvcc.cc/"><img class="program_image" src="../../images/certs/tvcc.jpg" /></a>
 					<a target="_blank" title="SSCP -- Systems Security Certified Practitioner" href="https://www.isc2.org/sscp"><img class="program_image" src="../../images/certs/SSCP.png" /></a>
-					<a target="_blank" title="CISSP -- Certified Information Systems Security Professional" href="https://www.isc2.org/cissp"><img class="program_image" src="../../images/certs/CISSP.png" /></a>					
+					<a target="_blank" title="CISSP -- Certified Information Systems Security Professional" href="https://www.isc2.org/cissp"><img class="program_image" src="../../images/certs/CISSP.png" /></a>	
+					<a target="_blank" title="GREM -- GIAC Reverse Engineering Malware" href="https://www.giac.org/certification/reverse-engineering-malware-grem"><img class="program_image" src="../../images/certs/grem.jpg" /></a>
 										
 					<p><br /></p>
 					<h1>Language Skills</h1>
