--- a/pages/profile/index.html
+++ b/pages/profile/index.html
@@ -17,7 +17,7 @@
 					<p><br /></p>
 					<h1>Summary</h1>
 					<div id="description">
-					I am a Lead Security Analyst with a passion for the researching of security vulnerabilities in enterprise software.<br /><br />
+					I am a Lead Security Engineer with a passion for the researching of security vulnerabilities in enterprise software.<br /><br />
 					ALSO<br />
 					<ul class="skills">
 						<li class="skills">Configuration and Change Management</li>
@@ -37,11 +37,13 @@
 
 					<p><br /></p>
 					<h1>Education</h1>
+					<a target="_blank" title="MS Cybersecurity and Information Assurance" href="https://www.wgu.edu/"><img class="program_image" src="../../images/certs/wgu.jpg" /></a>
 					<a target="_blank" title="BS Information Technology (Software Development Emphasis)" href="https://www.boisestate.edu/"><img class="program_image" src="../../images/certs/bsu.png" /></a>
 					<a target="_blank" title="AA Psychology" href="http://www.tvcc.cc/"><img class="program_image" src="../../images/certs/tvcc.jpg" /></a>
+					<br />
+					<a target="_blank" title="CISSP -- Certified Information Systems Security Professional" href="https://www.isc2.org/cissp"><img class="program_image" src="../../images/certs/CISSP.png" /></a>
 					<a target="_blank" title="SSCP -- Systems Security Certified Practitioner" href="https://www.isc2.org/sscp"><img class="program_image" src="../../images/certs/SSCP.png" /></a>
-					<a target="_blank" title="CEH -- Certified Ethical Hacker" href="https://www.eccouncil.org/programs/certified-ethical-hacker-ceh/"><img class="program_image" src="../../images/certs/ceh.png" /></a>
-					<a target="_blank" title="CISSP -- Certified Information Systems Security Professional" href="https://www.isc2.org/cissp"><img class="program_image" src="../../images/certs/CISSP.png" /></a>	
+					<a target="_blank" title="CEH -- Certified Ethical Hacker" href="https://www.eccouncil.org/programs/certified-ethical-hacker-ceh/"><img class="program_image" src="../../images/certs/ceh.png" /></a>	
 					<a target="_blank" title="GREM -- GIAC Reverse Engineering Malware" href="https://www.giac.org/certification/reverse-engineering-malware-grem"><img class="program_image" src="/images/certs/grem.png" /></a>
 										
 					<p><br /></p>
