added blog link

--- a/pages/index/index.html
+++ b/pages/index/index.html
@@ -18,6 +18,7 @@
 		<div class="link_list">
 			<ul>
 				<li><a href="../profile/"><span class="fa fa-user fa-fw">&nbsp;</span> About Me</a></li>
+				<li><a href="/blog"><span class="fa fa-blog fa-fw">&nbsp</span> Blog</a></li>
 				<li><a href="../external_links/"><span class="fa fa-link fa-fw">&nbsp;</span> Useful Links</a></li>
 				<li><hr width="100px" /></li>
 				<li><a target="_blank" href="https://www.linkedin.com/in/kunzman"><span class="fa fa-linkedin fa-fw">&nbsp;</span> LinkedIn</a></li>
